fixes to equal spacing on grid items

--- a/web/src/components/project-preview-grid-art.module.css
+++ b/web/src/components/project-preview-grid-art.module.css
@@ -17,7 +17,12 @@
 .grid {
   @media (min-width: 450px) {
     column-count: 2;
+    gap: 15px;
   }
+}
+
+.listItem {
+  padding-top: 5px;
 }
 
 .scroll {
@@ -28,10 +33,6 @@
 
 .scroll::-webkit-scrollbar {
   display: none;
-}
-
-.border {
-  box-shadow: inset 5px 10px #888888;
 }
 
 .landscape {
